media/jetpack/css/UI.Layout.css
body {
	background: #fff url(../img/sidebar-bg.png) 0 0 repeat-y;
	font-family: 'Lucida Grande', 'Lucida Sans', 'Lucida Sans Unicode', 'Myriad', Tahoma, Verdana, Arial, sans-serif;
	font-size: .8em;
	color: #4D5860;
	overflow-x: hidden;
}

/* CSS STICKY FOOTER */

* {
	margin: 0;
}
html, body {
	height: 100%;
}
#wrapper {
	min-height: 100%;
	height: auto !important;
	height: 100%;
	margin: 0 auto -175px; /* the bottom margin is the negative value of the footer's height */
}
#push, #app-footer {
	height: 175px; /* .push must be the same height as .footer */
}

/* CSS STICKY FOOTER */

a,
a:link {
	text-decoration: none;
	color: #4D5860;
	outline: none;
}

a:hover {
	text-decoration: underline;
}

/*
 =========================================================================== */
#wrapper {
	min-width: 675px;
}

.centerSection
{
	padding: 0 15px;
}

.UI_middleWrapper,
.centerSection p {
	max-width: 975px;
	margin: 0 auto;
	position: relative;
}

.UI_middleWrapper.page {

}

/*
 =========================================================================== */
#app-header {
	position: relative;
	height: 44px;
	border-top: 1px solid #153877;
	border-bottom: 2px solid #153877;
	background: url(../img/mozilla/header.png) repeat-x left top;
	z-index: 1;
	-moz-box-shadow: 0 2px 2px -2px #666;
}

	#app-header nav {
		float: right;
		margin: 9px 9px 0 0;
	}
   
	#app-header nav li {
		float: left;
		color: #fff;
		cursor:default;
		padding: 5px 2px;
		margin: 0 4px;
		position:relative;
	}
   		
		#app-header nav li a, #app-header nav li span {
			font-size: .9em;
			color: #fff;
			text-shadow: 0 1px 0 #153877;
		}      

		#app-header nav li a.logout {
			color: #ddd;
		}

		#app-header nav li a:hover {
			color: #fff;
		}
      
	#app-header nav li.active {
		background: -moz-linear-gradient(top, #000, #222);
		-moz-border-radius: 3px;
		-moz-box-shadow: 0 1px 0 #5077BF;
		margin: 0 3px;
		padding: 1px;
		color: #fff;
		text-shadow: 0 1px 0 #000;
	}
      
		#app-header nav li.active span {
			background: -moz-linear-gradient(top, #555, #666);
			-moz-border-radius: 2px;
			padding: 4px 8px;
			display: inline-block;
		}

		#app-header nav li.active a {
			color: #fff;
		}
	
	#app-header nav li .pointytip {
		display: none;
		padding-top:10px;
		position:absolute;
		right: -13px;
		margin-top: 3px;
		z-index:100;
	}
	
		#app-header nav li:hover .pointytip {
			display:block;
		}
		
		#app-header nav li .pointytip ul {
			background:rgba(0,0,0, 0.7);
			-moz-border-radius:5px;
			overflow:hidden;
			padding:10px;
		}
		
		#app-header nav li .pointytip .pointer {
			border-color:transparent transparent #000 transparent;
			border-style:solid;
			border-width:10px;
			height:0;
			width:0;
			position:absolute;
			top:-10px;
			left:40px;
			opacity:0.7;
		}
/*
 =========================================================================== */
#flightdeck-logo {
	display: block;
	float: left;
	font-size: 2.0em;
	margin: 4px 0 0;
}

	#flightdeck-logo a {
		display: block;
		width: 257px;
		height: 36px;
		background: url(../img/flightdeck-logo.png) 0 0 no-repeat;
		text-indent: -900em;
	}

#mozillalabs-logo {
	display: none;
}


#brand
{
	float: right;
	width: 97px;
	height: 24px;
	display: block;
	background: url(../img/mozilla/mozilla_logo.png) 0 0 no-repeat;
	text-indent: -900em;
	margin-top: 9px;
}

/*
 =========================================================================== */
#app-body {
	
}

/*
 =========================================================================== */
#app-content {
	
}

/*
 =========================================================================== */
#editor-menu-wrapper {
	background: #E5E9EE;
	border-bottom: solid 1px #AFB6BD;
	padding: 5px 6px 7px;
}

/*
 =========================================================================== */
#editor-wrapper {
	background: -moz-linear-gradient(270deg, #E5E5E5, #FFFFFF 4px);
	position: relative;
}

/*
 =========================================================================== */
#app-sidebar {
	position: absolute;
	width: 230px;
}

#package-info {
    margin: 6px 8px 12px 7px;
    padding: 4px 6px 6px;
	border: solid 1px;
	border-color: #333 #222 #000;
	background: -moz-linear-gradient(top , #666, #444);
	-moz-border-radius: 3px;
	-moz-box-shadow: 0 2px 2px -1px #666;
}

	#package-info span {
		color: #fff;
		font-weight: bold;
	}
		
/*
 =========================================================================== */
.UI_Heading {
	border-bottom: solid 1px #E9EDF0;
	padding: 0 0 5px;
	margin: 0 0 15px;
	color: #666;
	font-size: 1.4em;
	font-family: Helvetica, Arial, Tahoma, sans-serif;
}

#apibrowser .UI_Sidebar .UI_Heading {
	border-top: solid 1px #E9EDF0;
	border-bottom: 0px;
	padding: 15px 0 0;
}

#apibrowser .UI_Sidebar .UI_Heading:first-child {
	padding-top: 0px;
	border-top: 0px;
	margin-bottom: 5px;
}

/*
 =========================================================================== */
.UI_SeeMore a {
	font-size: .9em;
	font-weight: bold;
	color: #478CDE;
	display: inline-block;
	color: #478CDE;
	padding-bottom: 1px;
	border-bottom: solid 1px #E9EDF0;
}

.UI_SeeMore a:hover {
	text-decoration: none;
	color: #3E464D;
	border-bottom: solid 1px #478CDE;
}

/*
 =========================================================================== */
.UI_tooltip {
	padding: 8px;
	background: rgba(0, 0, 0, 0.7);
	color: #fff;
	font-size: .9em;
	text-shadow: 0 1px 0 #000;
	min-width: 120px;
	-moz-border-radius: 3px;
	width: 220px;
}

	.UI_tooltip .tip-title {
		font-weight: bold;
		margin-bottom: 5px;
	}

/*
 =========================================================================== */
.UI_Action_List {
	font-size: .9em;
}

	.UI_Action_List li {
		font-weight: bold;
		margin: 0 0 10px;
	}

		.UI_Action_List li:hover strong,
		.UI_Action_List li.selected strong {
			color: #3E464D;
		}

		.UI_Action_List li a {
			color: #478CDE;
			padding-bottom: 1px;
			border-bottom: solid 1px #E9EDF0;
		}

		.UI_Action_List li a:hover,
		.UI_Action_List li.selected a {
			text-decoration: none;
			color: #3E464D;
			border-bottom: solid 1px #478CDE;
		}

		.UI_Action_List li strong {
			color: #CCC;
			font-size: .9em;
			margin-left: 5px;
		}

/*
=========================================================================== */
.UI_Browser .UI_Item {
    overflow: hidden;
}
.UI_Actions {
	margin: 14px 10px 14px 0;
    float: left;
}

	.UI_Actions li {
		background: #BEC5CC;
		border-bottom: solid 1px #fff;
		padding: 1px;
		margin: 0 -1px 1px 0;
		float: left;
		position: relative;
	}

		.UI_Actions li a {
			background: -moz-linear-gradient(270deg, #EBEFF2, #D4D9DF);
			-moz-box-shadow: 0 -1px 0 #fff;
			display: block;
			padding: 7px 10px;
			margin: 1px 0 0;
			font-size: .9em;
			text-shadow: 0 1px 0 #fff;      
		}

	/* Starting element */
	.UI_Actions li:first-child {
		-moz-border-radius: 6px;
		-moz-border-radius-topright: 0;
		-moz-border-radius-bottomright: 0;      
	}

		.UI_Actions li:first-child a {
			-moz-border-radius: 5px;
			-moz-border-radius-topright: 0;
			-moz-border-radius-bottomright: 0;
		}

	/* Ending element */
	.UI_Actions li:last-child {
		-moz-border-radius: 6px;
		-moz-border-radius-topleft: 0;
		-moz-border-radius-bottomleft: 0;      
	}

		.UI_Actions li:last-child a {
			-moz-border-radius: 5px;
			-moz-border-radius-topleft: 0;
			-moz-border-radius-bottomleft: 0;
		}
		
	/* There's only one element */
	.UI_Actions li.single {
		-moz-border-radius: 6px;
	}

		.UI_Actions li.single a {
			-moz-border-radius: 5px;
		}

		.UI_Actions li a:hover,
		.UI_Actions li.UI_Pick_Version a {
			background: -moz-linear-gradient(270deg, #FBFBFB, #E6E8EB);
			text-decoration: none;
		}

		.UI_Actions li a:active,
		.UI_Actions li.UI_Pick_Version a:active,
		.UI_Actions li.pressed a {
			background: -moz-linear-gradient(270deg, #BEC5CC, #D9DDE0);
			-moz-box-shadow: none;
			border-top: none;
			color: #6D7880;
		}


	.UI_Actions li.UI_Pick_Version {
		position: relative;
	}

		.UI_Actions li.UI_Pick_Version.active {
			-moz-border-radius-bottomright: 0;
		}

			.UI_Actions li.UI_Pick_Version.active a {
				-moz-border-radius-bottomright: 0;
			}
#app-footer
		.UI_Actions li.UI_Pick_Version a span {
			height: 10px;
			width: 11px;
			display: inline-block;
			margin-left: 5px;
			background: url(../img/toggle-arrows.png) 0 -23px no-repeat;
		}

		.UI_Actions li.UI_Pick_Version .UI_Versions {
			position: absolute;
			top: 31px;
			right: 0;
			background: #fff;
			width: 110px;
			border: solid 1px #BEC5CC;
			z-index: 50;
			padding: 5px 0;
			opacity: 0;
			-moz-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
			-moz-border-radius-bottomleft: 6px;
			-moz-border-radius-bottomright: 6px;
		}

		.UI_Actions li.UI_Pick_Version .UI_Versions.loading {
			background: #fff url(../img/spinner.gif) 50% 50% no-repeat;
			height: 30px;
		}

			.UI_Actions li.UI_Pick_Version .UI_Versions li {
				background: transparent;
				-moz-border-radius: 0;
				padding: 0;
				margin: 0;
				float: none;
				border: none;
			}

				.UI_Actions li.UI_Pick_Version .UI_Versions li a {
					background: transparent;
					-moz-border-radius: 0;
					margin: 0;
					display: block;
					float: none;
					padding: 2px 5px;
					border: none;
					font-size: .8em;
				}

				.UI_Actions li.UI_Pick_Version .UI_Versions li a:hover {
					background: -moz-linear-gradient(270deg, #5AA2F3, #3E81D2);
					color: #fff;
					text-shadow: 0 1px 0 #011E4F;
				}

kbd {
	border:1px solid #ababab;
	border-radius:3px;
	color:#999;
	font-family:Lucida Grande, monospace;
	font-size:10px;
	padding:2px 3px;
}

/*
 =========================================================================== */
#app-footer {
	background: url(../img/mozilla/footer.png) repeat-x top left;
	overflow: hidden;
}


/* From AMO */
/* @group Footer */

#footer
{
	margin-top: 107px;    
	color: #fff;	
}
#footer a {
    color: #AFD7FF;
}

#footer div.UI_middleWrapper {
	background: url(../img/mozilla/logo-mozilla.gif) no-repeat 15px 0;
	
}
#footer .primary {

}
#footer .primary ul {
    margin-top: 7px;
}
#footer .primary strong {
    font-weight: bold;
}

#footer p {
    margin-bottom: 0;
    margin-left: 60px;
}
#footer ul {
    font-size: 80%;
    margin-top: 4px;
	margin-left: 60px;
    padding: 0;
}
#footer ul li {
    display: inline;
    margin-right: 10px;
}

#footer .languages {
    float: right;
    margin: 0;
	font-weight: bold;
}

	#footer .languages button {
	    display: none;
	}

/* SPINNER ############################################ */
.spinner {
  position: absolute;
  opacity: 0.9;
  filter:. alpha(opacity=90);
  /*-ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=90);*/
  z-index: 999;
  background: #fff;
}
.spinner-msg {
  text-align: center;
  color: #999;
  margin-bottom: 3px;
}

.spinner-img {
  background: url(../img/spinner.gif) no-repeat;
  width: 24px;
  height: 24px;
  margin: 0 auto;
}


/* @end */

